# signal-forge

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  README_REMOTE_WORKFLOW.md  debug_fetch.py  pyproject.toml  run_cycle.sh  run_live_pipeline.py  signal_forge_v1.pine
_site/: index.html  latest_premarket.html  latest_sunday.html  morning_edge.html
artifacts/: latest_patch.diff
docs/: AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_REFINEMENTS_REVIEW.md  CONFLICT_RULES_ENGINE.md  DECISIONS.md  DEV_LOG.md  EXECUTION_TEMPLATE.md  EXPRESSION_QUALITY.md  IMPLEMENTATION_NOTES.md  MEMORY_LAYER.md  NEXT_STEPS.md  PRINCIPLES.md  PROJECT_CHARTER.md  ROADMAP.md  SIGNAL_FORGE_V1_PINE.md  STANDARDS.md  STATUS.md  UNIFIED_THESIS_ENGINE.md  VISUAL_DESIGN_SYSTEM.md  WORKFLOW.md  architecture.md  data_sources.md  options_framework.md  regime_model.md  runbook.md  signal_forge_v1_usage_guide.md  termux_observation_runner.md  trade_qualification.md  volume_profile_usage_guide.md
logs/: backtest_log.jsonl  morning_healthcheck.history.jsonl  morning_healthcheck.latest.json  morning_status.txt  observation_notes.txt
outputs/: audit.log.jsonl  indicator_accuracy.csv  indicator_accuracy_report.py
pinescripts/: 0dte_momentum_setup.pine
reports/: 2026-04-11.md  build_all.py  build_logging.py  design_system.py  morning_edge.py  morning_healthcheck.py  report_lifecycle.py  run_premarket.py  run_sunday.py  schedule.py  sunday_report.py  trading_calendar.py
scripts/: morning_edge_runner.sh  run_demo.py  run_indicator_accuracy.py  run_observation_termux.sh  run_reports_termux.sh
(+159 files in other folders)
